[gd_scene load_steps=4 format=3 uid="uid://hkpwcylaxo6v"]

[ext_resource type="Script" path="res://lp_4_2.gd" id="1_g5ouy"]

[sub_resource type="Theme" id="Theme_12n1w"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_wmucy"]
default_font_size = 30

[node name="LP4-2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g5ouy")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 576.0
offset_bottom = 107.0
theme = SubResource("Theme_12n1w")
text = "Enter Package Weight In Kilograms:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 70.0
offset_right = 578.0
offset_bottom = 177.0
theme = SubResource("Theme_12n1w")
text = "Enter Package Weight In Kilograms:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 140.0
offset_right = 578.0
offset_bottom = 247.0
theme = SubResource("Theme_12n1w")
text = "Enter Package Weight In Kilograms:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 206.0
offset_right = 580.0
offset_bottom = 313.0
theme = SubResource("Theme_12n1w")
text = "Enter Package Weight In Kilograms:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 312.0
offset_right = 582.0
offset_bottom = 649.0
theme = SubResource("Theme_12n1w")
text = "Enter Package Weight In Kilograms:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 16.0
offset_right = 1103.0
offset_bottom = 79.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 558.0
offset_top = 94.0
offset_right = 1101.0
offset_bottom = 157.0

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 162.0
offset_right = 1103.0
offset_bottom = 225.0

[node name="LineEdit4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 562.0
offset_top = 228.0
offset_right = 1105.0
offset_bottom = 291.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 740.0
offset_top = 306.0
offset_right = 914.0
offset_bottom = 402.0
theme = SubResource("Theme_wmucy")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 740.0
offset_top = 424.0
offset_right = 914.0
offset_bottom = 520.0
theme = SubResource("Theme_wmucy")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 746.0
offset_top = 546.0
offset_right = 920.0
offset_bottom = 642.0
theme = SubResource("Theme_wmucy")
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
